// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Akta it should render generator components 1`] = `
<body>
  <div
    id="app"
  >
    <div>
      <div>
        <p>
          State 2
        </p>
        <button>
          Next
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Akta it should render generator components 2`] = `
<body>
  <div
    id="app"
  >
    <div>
      <p>
        State 3
      </p>
    </div>
  </div>
</body>
`;

exports[`Akta should handle css props with media queries properly 1`] = `
<body>
  <div
    id="app"
  >
    <div
      class="c0 c1 c2"
      style="height: 100vh; width: 100vw;"
    >
      <svg
        style="stroke: red; fill: grey;"
        viewBox="0 0 50 50"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="10"
          cy="10"
          r="5"
        />
        <circle
          cx="20"
          cy="20"
          r="5"
        />
        <svg
          viewBox="0 0 10 10"
          x="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="5"
            cy="5"
            r="4"
          />
        </svg>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Akta should handle css props with media queries properly 2`] = `
".c0 {background-color: red;}
(min-width: 100px)
.c1 {background-color: blue;}
(max-width: 500px) and (min-width: 200px)
.c2 {background-color: green;}"
`;
